fix project overview discussion tiles alignment

--- a/views/assets/src/helpers/less/customization/pm-overview.less
+++ b/views/assets/src/helpers/less/customization/pm-overview.less
@@ -1225,3 +1225,7 @@ div#pm-calender-page .project-select-area .form-content-wrap {
 		max-width: calc(70% - 50px) !important;
 	}
 }
+
+.project-overview.pm-project-overview-container .overview-menu li.message {
+	line-height: unset !important;
+}
